[package]
name = "cairo-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
cairo-vm = { git = "https://github.com/zksecurity/cairo-vm.git", features = [
    "extensive_hints",
    "clap",
], rev = "ac8b81b79f65f5017fe0929bf4025be4a0e9c73c" }
num-traits = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
starknet-crypto = "0.6.2"
starknet-types-core = "0.1.2"
thiserror-no-std = "2.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"
